# advent_of_code

aoc-util/: Cargo.toml
aoc-util/parsing/: Cargo.toml
aoc-util/parsing/src/: lib.rs
aoc-util/src/: direction.rs  grid.rs  lib.rs  point.rs
aoc-util/src/grid/: direction.rs  grid.rs  mod.rs  position.rs
aoc-util/src/parsing/: mod.rs
scatterfold_aoc/: Cargo.toml
scatterfold_aoc/src/: main.rs
scatterfold_aoc/template/: Cargo.toml
scatterfold_aoc/template/src/: main.rs
y2023/y2023_1/: Cargo.toml
y2023/y2023_1/src/: main.rs
y2023/y2023_10/: Cargo.toml
y2023/y2023_10/src/: main.rs
y2023/y2023_11/: Cargo.toml
y2023/y2023_11/src/: main.rs
y2023/y2023_12/: Cargo.toml
y2023/y2023_12 copy/: Cargo.toml
y2023/y2023_12 copy/src/: main.rs
y2023/y2023_12/src/: main.rs
y2023/y2023_13/: Cargo.toml
y2023/y2023_13/src/: main.rs
y2023/y2023_15/: Cargo.toml
y2023/y2023_15/src/: main.rs
y2023/y2023_17/: Cargo.toml
y2023/y2023_17/src/: main.rs
y2023/y2023_18/: Cargo.toml
y2023/y2023_18/src/: main.rs
y2023/y2023_2/: Cargo.toml
y2023/y2023_2/src/: main.rs
y2023/y2023_21/: Cargo.toml
y2023/y2023_21/src/: main.rs
y2023/y2023_3/: Cargo.toml
y2023/y2023_3/src/: main.rs
y2023/y2023_4/: Cargo.toml
y2023/y2023_4/src/: main.rs
y2023/y2023_5/: .gitignore  Cargo.toml
y2023/y2023_5/src/: main.rs
y2023/y2023_6/: Cargo.toml
y2023/y2023_6/src/: main.rs
y2023/y2023_8/: Cargo.toml
y2023/y2023_8/src/: main.rs
y2023/y2023_9/: Cargo.toml
y2023/y2023_9/src/: main.rs
