[package]
name = "aoc-util"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["./parsing"]

[features]
default = ["parsing", "gxhash"]
parsing = ["dep:parsing"]
gxhash = ["dep:gxhash"]


[dependencies]
anyhow = "1.0.75"
gxhash = { version = "2.2.4", optional = true }
parsing = { path = "./parsing", optional = true }
