[package]
name = "scatterfold_aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive", "env"] }
ureq = "2.9.1"
anyhow = "1.0.75"
regex = "1.10.2"
walkdir = "2"
copy_dir = "0.1.3"
once_cell = "1.18.0"
